--- a/apps/shelter-web/project.json
+++ b/apps/shelter-web/project.json
@@ -48,7 +48,7 @@
     "post-pr-preview": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/post-preview-comment.js --url=https://shelters.dev.betterangels.la$VITE_APP_BASE_PATH"
+        "command": "node tools/scripts/post-preview-comment.js --url=https://shelter.dev.betterangels.la$VITE_APP_BASE_PATH"
       }
     }
   }
