--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,15 +26,7 @@
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript", "plugin:react-native-a11y/all"],
       "rules": {
-        "@typescript-eslint/no-unused-vars": [
-          "error",
-          {
-            "destructuredArrayIgnorePattern": "^_",
-            "varsIgnorePattern": "^_",
-            "argsIgnorePattern": "^_",
-            "ignoreRestSiblings": true
-          }
-        ],
+        "@typescript-eslint/no-unused-vars": "error",
         "no-multiple-empty-lines": [
           "error",
           {
