--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sanity/client": "^6.27.1",
     "@tanstack/react-query": "^5.64.2",
     "@teovilla/react-native-web-maps": "^0.9.5",
+    "@types/validator": "^13.15.0",
     "@vis.gl/react-google-maps": "^1.4.2",
     "apollo-link-rest": "^0.9.0",
     "apollo-upload-client": "^18.0.1",
@@ -82,7 +83,8 @@
     "react-router-dom": "6.11.2",
     "remeda": "^2.20.0",
     "tailwind-merge": "^2.5.5",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
