--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "axios": "^1.8.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.37",
+    "expo": "~52.0.46",
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.3",
     "expo-build-properties": "~0.13.2",
@@ -49,7 +49,7 @@
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "2.0.1",
     "expo-updates": "~0.27.1",
     "expo-web-browser": "~14.0.2",
@@ -67,7 +67,7 @@
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-controller": "^1.13.0",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.22.6",
     "react-native-modal": "^13.0.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
@@ -97,22 +97,22 @@
     "@iarna/toml": "^2.2.5",
     "@nx-tools/container-metadata": "^6.1.1",
     "@nx-tools/nx-container": "6.2.0",
-    "@nx/eslint": "20.7.2",
-    "@nx/eslint-plugin": "20.7.2",
-    "@nx/expo": "20.7.2",
-    "@nx/jest": "20.7.2",
-    "@nx/js": "20.7.2",
-    "@nx/react": "20.7.2",
-    "@nx/storybook": "20.7.2",
-    "@nx/vite": "20.7.2",
-    "@nx/web": "20.7.2",
-    "@nx/workspace": "20.7.2",
-    "@nxlv/python": "20.7.0",
-    "@storybook/addon-essentials": "8.5.5",
+    "@nx/eslint": "20.8.0",
+    "@nx/eslint-plugin": "20.8.0",
+    "@nx/expo": "20.8.0",
+    "@nx/jest": "20.8.0",
+    "@nx/js": "20.8.0",
+    "@nx/react": "20.8.0",
+    "@nx/storybook": "20.8.0",
+    "@nx/vite": "20.8.0",
+    "@nx/web": "20.8.0",
+    "@nx/workspace": "20.8.0",
+    "@nxlv/python": "20.13.3",
+    "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-react-native-web": "^0.0.24",
-    "@storybook/core-server": "8.5.5",
+    "@storybook/core-server": "8.6.12",
     "@storybook/react-native": "^8.4.2",
-    "@storybook/react-webpack5": "8.5.5",
+    "@storybook/react-webpack5": "8.6.12",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -157,7 +157,7 @@
     "jsdom": "~22.1.0",
     "metro": "^0.81.0",
     "metro-react-native-babel-transformer": "^0.77.0",
-    "nx": "20.7.2",
+    "nx": "20.8.0",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -177,8 +177,7 @@
     "cross-spawn": ">=7.0.5",
     "metro-resolver": "^0.81.0",
     "metro-config": "^0.81.0",
-    "micromatch": ">=4.0.8",
-    "ws": ">=8.17.1"
+    "micromatch": ">=4.0.8"
   },
   "engines": {
     "node": "22.14.0"
