--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,9 +1,10 @@
 name: 👷 Monorepo Pipeline
 
 on:
+  merge_group:
+    types: [checks_requested]
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
 
 env:
@@ -18,8 +19,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        environment: ${{ fromJson(github.ref == 'refs/heads/main' && '["preview", "production"]' || '["preview"]') }}
-
+        environment: >-
+          ${{ fromJson(
+            github.event_name == 'push' && github.ref == 'refs/heads/main'
+            && '["preview", "production"]'
+            || '["preview"]'
+          ) }}
     runs-on: ubuntu-latest
     environment: ${{ matrix.environment }}
     permissions:
@@ -32,7 +37,7 @@ jobs:
     steps:
       - name: 🚦 Turnstyle
         uses: softprops/turnstyle@master
-        if: github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -43,7 +48,7 @@ jobs:
 
       # This line is needed for nx affected to work when CI is running on a PR
       - name: 🔀 Track main if PR
-        if: github.ref != 'refs/heads/main'
+        if: github.event_name == 'pull_request'
         run: git branch --track main origin/main
 
       - name: 🔧 Configure NX SHAs
@@ -153,7 +158,7 @@ jobs:
         uses: kamilkisiela/graphql-inspector@master
         # Warning: This now skips schema breaking checks in forked repositories.
         # Resolve in: https://betterangels.atlassian.net/browse/DEV-690
-        if: ${{ github.event.pull_request.head.repo.fork == false }}
+        if: github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           schema: main:apps/betterangels-backend/schema.graphql
