--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~53.0.0-preview.3",
+    "jest-expo": "~53.0.5",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "metro": "^0.82.0",
