--- a/apps/betterangels/eas.json
+++ b/apps/betterangels/eas.json
@@ -4,6 +4,7 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
+        "EAS_NO_FROZEN_LOCKFILE": "1",
         "EXPO_PUBLIC_API_URL": "https://api.dev.betterangels.la",
         "EXPO_PUBLIC_DEMO_API_URL": "http://localhost:8000",
         "EXPO_PUBLIC_REDIRECT_URL": "https://api.dev.betterangels.la/auth-redirect",
@@ -19,6 +20,7 @@
       "distribution": "internal",
       "developmentClient": true,
       "env": {
+        "EAS_NO_FROZEN_LOCKFILE": "1",
         "EXPO_PUBLIC_API_URL": "https://api.dev.betterangels.la",
         "EXPO_PUBLIC_DEMO_API_URL": "http://localhost:8000",
         "EXPO_PUBLIC_REDIRECT_URL": "https://api.dev.betterangels.la/auth-redirect",
@@ -32,6 +34,7 @@
       },
       "env": {
         "APP_VARIANT": "production",
+        "EAS_NO_FROZEN_LOCKFILE": "1",
         "EXPO_PUBLIC_API_URL": "https://api.prod.betterangels.la",
         "EXPO_PUBLIC_DEMO_API_URL": "https://api.dev.betterangels.la",
         "EXPO_PUBLIC_REDIRECT_URL": "https://api.prod.betterangels.la/auth-redirect",
