--- a/apps/betterangels/eas.json
+++ b/apps/betterangels/eas.json
@@ -5,9 +5,11 @@
       "distribution": "internal",
       "env": {
         "EXPO_PUBLIC_API_URL": "https://api.dev.betterangels.la",
+        "EXPO_PUBLIC_APP_ENV": "development",
         "EXPO_PUBLIC_DEMO_API_URL": "http://localhost:8000",
         "EXPO_PUBLIC_REDIRECT_URL": "https://api.dev.betterangels.la/auth-redirect",
-        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "1066399826613-bu41lbb5ha9fpgen895kic4bgebkn223.apps.googleusercontent.com"
+        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "1066399826613-bu41lbb5ha9fpgen895kic4bgebkn223.apps.googleusercontent.com",
+        "EXPO_PUBLIC_NEW_RELIC_LOG_LEVEL": "INFO"
       },
       "channel": "development",
       "ios": {
@@ -19,10 +21,12 @@
       "distribution": "internal",
       "developmentClient": true,
       "env": {
+        "EXPO_PUBLIC_APP_ENV": "development",
         "EXPO_PUBLIC_API_URL": "https://api.dev.betterangels.la",
         "EXPO_PUBLIC_DEMO_API_URL": "http://localhost:8000",
         "EXPO_PUBLIC_REDIRECT_URL": "https://api.dev.betterangels.la/auth-redirect",
-        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "1066399826613-bu41lbb5ha9fpgen895kic4bgebkn223.apps.googleusercontent.com"
+        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "1066399826613-bu41lbb5ha9fpgen895kic4bgebkn223.apps.googleusercontent.com",
+        "EXPO_PUBLIC_NEW_RELIC_LOG_LEVEL": "INFO"
       },
       "node": "22.14.0"
     },
@@ -32,10 +36,12 @@
       },
       "env": {
         "APP_VARIANT": "production",
+        "EXPO_PUBLIC_APP_ENV": "production",
         "EXPO_PUBLIC_API_URL": "https://api.prod.betterangels.la",
         "EXPO_PUBLIC_DEMO_API_URL": "https://api.dev.betterangels.la",
         "EXPO_PUBLIC_REDIRECT_URL": "https://api.prod.betterangels.la/auth-redirect",
-        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "243499089918-vtp6l4qrbrrgu8lhcqki7r9a34iu9rlv.apps.googleusercontent.com"
+        "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "243499089918-vtp6l4qrbrrgu8lhcqki7r9a34iu9rlv.apps.googleusercontent.com",
+        "EXPO_PUBLIC_NEW_RELIC_LOG_LEVEL": "WARN"
       },
       "channel": "production",
       "node": "22.14.0"
