--- a/package.json
+++ b/package.json
@@ -42,17 +42,19 @@
     "expo-constants": "~17.1.2",
     "expo-dev-client": "~5.1.3",
     "expo-document-picker": "~13.1.3",
+    "expo-file-system": "~18.1.9",
     "expo-font": "~13.3.1",
     "expo-image-manipulator": "~13.1.3",
     "expo-image-picker": "~16.1.2",
     "expo-linking": "~7.1.2",
     "expo-location": "~18.1.2",
+    "expo-modules-core": "~2.3.12",
     "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.1",
     "expo-sharing": "~13.1.3",
     "expo-splash-screen": "~0.30.5",
     "expo-status-bar": "~2.2.1",
-    "expo-updates": "~0.28.6",
+    "expo-updates": "~0.28.12",
     "expo-web-browser": "~14.1.4",
     "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
