--- a/apps/betterangels/eas.json
+++ b/apps/betterangels/eas.json
@@ -1,27 +1,33 @@
 {
+  "cli": {
+    "version": ">= 5"
+  },
   "build": {
-    "development-simulator": {
+    "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "channel": "development",
       "env": {
+        "APP_VARIANT": "development",
         "EAS_NO_FROZEN_LOCKFILE": "1",
-        "EXPO_PUBLIC_API_URL": "https://api.dev.betterangels.la",
         "EXPO_PUBLIC_APP_ENV": "development",
+        "EXPO_PUBLIC_API_URL": "https://api.dev.betterangels.la",
         "EXPO_PUBLIC_DEMO_API_URL": "http://localhost:8000",
         "EXPO_PUBLIC_REDIRECT_URL": "https://api.dev.betterangels.la/auth-redirect",
         "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "1066399826613-bu41lbb5ha9fpgen895kic4bgebkn223.apps.googleusercontent.com",
         "EXPO_PUBLIC_NEW_RELIC_LOG_LEVEL": "INFO"
       },
-      "channel": "development",
       "ios": {
         "simulator": true
       },
       "node": "22.14.0"
     },
     "preview": {
-      "distribution": "internal",
       "developmentClient": true,
+      "distribution": "internal",
+      "channel": "development",
       "env": {
+        "APP_VARIANT": "development",
         "EAS_NO_FROZEN_LOCKFILE": "1",
         "EXPO_PUBLIC_APP_ENV": "development",
         "EXPO_PUBLIC_API_URL": "https://api.dev.betterangels.la",
@@ -33,6 +39,7 @@
       "node": "22.14.0"
     },
     "production": {
+      "channel": "production",
       "android": {
         "buildType": "app-bundle"
       },
@@ -46,7 +53,6 @@
         "EXPO_PUBLIC_GOOGLE_CLIENT_ID": "243499089918-vtp6l4qrbrrgu8lhcqki7r9a34iu9rlv.apps.googleusercontent.com",
         "EXPO_PUBLIC_NEW_RELIC_LOG_LEVEL": "WARN"
       },
-      "channel": "production",
       "node": "22.14.0"
     }
   },
@@ -60,8 +66,5 @@
         "releaseStatus": "draft"
       }
     }
-  },
-  "cli": {
-    "version": ">= 5"
   }
 }
