--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "swc-loader": "0.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
+    "ts-essentials": "^10.1.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.5.2",
     "ts-node": "10.9.1",
