--- a/apps/shelter-e2e/tsconfig.json
+++ b/apps/shelter-e2e/tsconfig.json
@@ -2,9 +2,5 @@
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
-  "references": [
-    {
-      "path": "./tsconfig.e2e.json"
-    }
-  ]
+  "references": []
 }
