--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@storybook/addon-docs": "9.1.2",
     "@storybook/addon-react-native-web": "^0.0.29",
     "@storybook/react-native": "^9.1.0",
+    "@storybook/react-native-web-vite": "^9.1.5",
     "@storybook/react-vite": "9.1.2",
     "@storybook/react-webpack5": "9.1.2",
     "@svgr/webpack": "^8.1.0",
