--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "storybook-start": "nx run expo-shared-ui-components:storybook",
-    "storybook-build": "nx storybook build expo-shared-ui-components",
-    "storybook-react": "nx run storybook-react:storybook",
-    "storybook-react-build": "nx run storybook-react:build",
+    "storybook": "nx run storybook-react:storybook",
+    "storybook-build": "nx run storybook-react:build",
     "server": "nx start betterangels-backend",
     "ba": "nx start betterangels",
     "ba:build-dev": "nx build betterangels --profile development",
@@ -132,6 +130,7 @@
     "@storybook/addon-docs": "9.1.2",
     "@storybook/addon-react-native-web": "^0.0.29",
     "@storybook/react-native": "^9.1.0",
+    "@storybook/react-native-web-vite": "^9.1.5",
     "@storybook/react-vite": "9.1.2",
     "@storybook/react-webpack5": "9.1.2",
     "@svgr/webpack": "^8.1.0",
