--- a/package.json
+++ b/package.json
@@ -111,21 +111,21 @@
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@iarna/toml": "^2.2.5",
-    "@nx-tools/container-metadata": "^6.1.1",
-    "@nx-tools/nx-container": "6.2.0",
-    "@nx/devkit": "21.1.3",
-    "@nx/eslint": "21.1.3",
-    "@nx/eslint-plugin": "21.1.3",
-    "@nx/expo": "21.1.3",
-    "@nx/jest": "21.1.3",
-    "@nx/js": "21.3.11",
-    "@nx/playwright": "21.1.3",
-    "@nx/react": "21.1.3",
-    "@nx/storybook": "^21.3.11",
-    "@nx/vite": "21.3.11",
-    "@nx/web": "21.3.11",
-    "@nx/workspace": "21.1.3",
-    "@nxlv/python": "21.0.4",
+    "@nx-tools/container-metadata": "^6.8.2",
+    "@nx-tools/nx-container": "6.8.2",
+    "@nx/devkit": "21.5.3",
+    "@nx/eslint": "21.5.3",
+    "@nx/eslint-plugin": "21.5.3",
+    "@nx/expo": "21.5.3",
+    "@nx/jest": "21.5.3",
+    "@nx/js": "21.5.3",
+    "@nx/playwright": "21.5.3",
+    "@nx/react": "21.5.3",
+    "@nx/storybook": "21.5.3",
+    "@nx/vite": "21.5.3",
+    "@nx/web": "21.5.3",
+    "@nx/workspace": "21.5.3",
+    "@nxlv/python": "21.2.0",
     "@playwright/test": "^1.36.0",
     "@storybook/addon-docs": "9.1.2",
     "@storybook/addon-react-native-web": "^0.0.29",
@@ -185,7 +185,7 @@
     "jsonc-eslint-parser": "^2.1.0",
     "metro": "^0.82.0",
     "metro-react-native-babel-transformer": "^0.77.0",
-    "nx": "21.1.3",
+    "nx": "21.5.3",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
     "postcss-loader": "^8.1.1",
