--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -58,7 +58,6 @@
     "expo-location": "*",
     "expo-document-picker": "*",
     "expo-image-picker": "*",
-    "react-native-modal": "*",
     "expo-file-system": "*",
     "react-native-pdf": "*",
     "@react-native-picker/picker": "*",
@@ -91,7 +90,9 @@
     "@storybook/react-native-web-vite": "*",
     "@nx/detox": "*",
     "@nx/rollup": "*",
-    "@types/geojson": "*"
+    "@types/geojson": "*",
+    "expo-crypto": "*",
+    "expo-image": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
