--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "storybook": "nx run storybook-react:storybook",
-    "storybook-build": "nx run storybook-react:build",
+    "sb": "nx run storybook-react:storybook",
+    "sb-build": "nx run storybook-react:build",
     "server": "nx start betterangels-backend",
     "ba": "nx start betterangels",
     "ba:build-dev": "nx build betterangels --profile development",
@@ -17,17 +17,16 @@
     "@apollo/client": "^3.11.1",
     "@config-plugins/react-native-blob-util": "^9.0.0",
     "@config-plugins/react-native-pdf": "^9.0.0",
-    "@expo/metro-config": "~0.20.0",
     "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^5.2.1",
     "@likashefqet/react-native-image-zoom": "^4.2.1",
     "@portabletext/react": "^3.2.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "2.11.1",
     "@sanity/client": "^6.27.1",
-    "@shopify/flash-list": "1.7.6",
+    "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.64.2",
     "@teovilla/react-native-web-maps": "^0.9.5",
     "@types/validator": "^13.15.0",
@@ -38,56 +37,58 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "53.0.20",
-    "expo-application": "~6.1.4",
-    "expo-build-properties": "~0.14.4",
-    "expo-camera": "~16.1.8",
-    "expo-clipboard": "~7.1.2",
-    "expo-constants": "~17.1.2",
-    "expo-dev-client": "~5.2.0",
-    "expo-document-picker": "~13.1.3",
-    "expo-font": "~13.3.1",
-    "expo-image-manipulator": "~13.1.3",
-    "expo-image-picker": "~16.1.2",
-    "expo-linking": "~7.1.2",
-    "expo-location": "~18.1.2",
-    "expo-router": "~5.1.0",
-    "expo-secure-store": "~14.2.1",
-    "expo-sharing": "~13.1.3",
-    "expo-splash-screen": "~0.30.9",
-    "expo-status-bar": "~2.2.1",
-    "expo-updates": "~0.28.14",
-    "expo-web-browser": "~14.2.0",
+    "expo": "54.0.12",
+    "expo-application": "~7.0.7",
+    "expo-build-properties": "~1.0.9",
+    "expo-camera": "~17.0.8",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.13",
+    "expo-document-picker": "~14.0.7",
+    "expo-font": "~14.0.8",
+    "expo-image": "~3.0.9",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-router": "~6.0.10",
+    "expo-secure-store": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
     "jotai": "^2.12.5",
     "libphonenumber-js": "^1.12.6",
-    "newrelic-react-native-agent": "^1.5.7",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "newrelic-react-native-agent": "^1.5.10",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-fast-compare": "^3.2.2",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-blob-util": "^0.21.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-keyboard-controller": "^1.13.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-maps": "1.20.1",
-    "react-native-modal": "^14.0.0-rc.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "^0.22.47",
-    "react-native-pdf": "^6.7.7",
-    "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-pdf": "patch:react-native-pdf@npm%3A6.7.7#~/.yarn/patches/react-native-pdf-npm-6.7.7-7aa1e3a631.patch",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "1.5.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-router-dom": "6.29.0",
     "remeda": "^2.20.0",
     "stylus": "github:stylus/stylus#0.54.4",
@@ -104,7 +105,7 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@chromatic-com/storybook": "^4.1.0",
-    "@expo/metro-runtime": "~5.0.2",
+    "@expo/metro-runtime": "~6.1.2",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.3.2",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
@@ -147,8 +148,8 @@
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
     "@types/node": "^20.0.0",
-    "@types/react": "~19.0.10",
-    "@types/react-dom": "~19.0.1",
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "~19.1.7",
     "@types/react-mailchimp-subscribe": "^2.1.4",
     "@types/supercluster": "^7.1.3",
     "@types/uuid": "^10.0.0",
@@ -162,7 +163,7 @@
     "babel-jest": "29.7.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-react-native-web": "^0.19.8",
-    "babel-preset-expo": "~13.0.0",
+    "babel-preset-expo": "~54.0.0",
     "babel-preset-vite": "^1.1.3",
     "core-js": "3.36.1",
     "daisyui": "^5.0.46",
@@ -179,11 +180,11 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~54.0.12",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "metro": "^0.82.0",
+    "metro": "^0.83.1",
     "metro-react-native-babel-transformer": "^0.77.0",
     "nx": "21.5.3",
     "nx-cloud": "19.1.0",
@@ -202,7 +203,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.3",
+    "typescript": "~5.9.2",
     "vite": "6.2.4",
     "vite-plugin-svgr": "^4.3.0",
     "vitest": "^1.6.1"
@@ -210,11 +211,10 @@
   "resolutions": {
     "cookie": ">=0.7.0",
     "cross-spawn": ">=7.0.5",
-    "metro-resolver": ">=0.82.0 <0.83.0",
-    "metro-config": ">=0.82.0 <0.83.0",
     "micromatch": ">=4.0.8",
+    "react-native-maps": "^1.26.7",
     "ws": ">=8.17.1",
-    "@expo/config-plugins": ">=10.0.0"
+    "@expo/config-plugins": ">=54.0.1"
   },
   "engines": {
     "node": "22.14.0"
