--- a/apps/betterangels-backend/pyproject.toml
+++ b/apps/betterangels-backend/pyproject.toml
@@ -54,6 +54,7 @@ djangorestframework = "^3.16.0"
 cryptography = "^45.0.5"
 django-admin-sortable2 = "^2.2.8"
 pyjwt = "^2.10.1"
+dalf = "^0.5.0"
 
 [build-system]
 requires = ["poetry-core"]
