--- a/mypy.ini
+++ b/mypy.ini
@@ -44,6 +44,9 @@ ignore_missing_imports = True
 [mypy-allauth.*]
 ignore_missing_imports = True
 
+[mypy-dalf.*]
+ignore_missing_imports = True
+
 [mypy-deepdiff.*]
 ignore_missing_imports = True
 
