--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -91,6 +91,9 @@
     "@nx/detox": "*",
     "@nx/rollup": "*",
     "@types/geojson": "*",
+    "@nx/detox": "*",
+    "@nx/rollup": "*",
+    "@types/geojson": "*",
     "expo-crypto": "*",
     "expo-image": "*"
   },
