--- a/package.json
+++ b/package.json
@@ -37,22 +37,22 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "54.0.12",
+    "expo": "54.0.13",
     "expo-application": "~7.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-camera": "~17.0.8",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.13",
+    "expo-dev-client": "~6.0.15",
     "expo-document-picker": "~14.0.7",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-image": "~3.0.9",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.12",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -212,7 +212,8 @@
     "cookie": ">=0.7.0",
     "cross-spawn": ">=7.0.5",
     "micromatch": ">=4.0.8",
-    "react-native-maps": "^1.26.7",
+    "react-native-maps": "^1.26.17",
+    "react-native-keyboard-controller": "1.19.1",
     "ws": ">=8.17.1",
     "@expo/config-plugins": ">=54.0.1"
   },
