--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,6 @@ repos:
     hooks:
       - id: forbid-secrets-in-cassettes
         name: Forbid secrets in VCR cassettes
-        entry: bash -c '! find apps -type d -name cassettes -exec grep -RIE "authorization:|x-api-key:|Bearer|uri:\\s+[A-Za-z0-9._-]+" {} +'
+        entry: bash -c '! find apps -type d -name cassettes -exec grep -RIEi "authorization|x-api-key|uri|Bearer|token\\s+[A-Za-z0-9._-]+" {} +'
         language: system
         pass_filenames: false
